# toolman

./: .dockerignore  .gitignore  .mcp-bridge-proxy-config.json  .mcp.json  .releaserc.json  .toolman-filter-test.json  .toolman-filter.json.example  .toolman-filter.json.example-restricted  CLAUDE.md  CLAUDE_CODE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.claude  Dockerfile.test  LICENSE  MCP_SERVER_INTEGRATION_GUIDE.md  PLATFORM_REPO_CHANGES.md  README.md  TASKMASTER.md  TEST_DOCKER.md  client-config.json  com.mcp.bridge-proxy.plist  dist-workspace.toml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  servers-config.http-example.json  servers-config.json  servers-config.session-example.json  servers-config.transport-examples.json  solana-search-improvements.md  test-docker.sh  test-session-config.sh  test-session-routing.sh  test-simple-config.json  toolman-mcp-testing-report.md
.claude/: mcp.json
.github/workflows/: ci-cd.yml  ci.yml  docker-publish.yml  release.yml  update-readme.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt  project-overview.md
.taskmaster/reports/: task-complexity-report.json  task-complexity-report_verification.json
.taskmaster/tasks/: tasks.json
charts/k8s-mcp-server/: Chart.yaml  values.yaml
charts/k8s-mcp-server/templates/: _helpers.tpl  clusterrole.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/mcp-proxy/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
charts/mcp-proxy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  serviceaccount.yaml
charts/toolman/: Chart.yaml  README.md  deployment-analysis.md  toolman-production-values.yaml  values.yaml
charts/toolman/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  home-mcp-pvc.yaml  hpa.yaml  ingress.yaml  local-tools-configmap.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
docs/: DEPLOYMENT.md  PACKAGING_STRATEGY.md  PER_SESSION_TOOL_FILTERING.md  SETUP_KUBECONFIG.md  TESTING_MULTI_PROJECT_FUNCTIONALITY.md  TRANSPORT_IMPLEMENTATION_PLAN.md  claude-code-setup.md  client-side-architecture.md  mcp-server-working-directory-patterns.md  multi-project-testing-instructions.md  save_config_workflow.md  session-based-architecture.md
scripts/: README.md  compare-tools.py  create-mcp-secrets.sh  example-secrets.env  init-mcp-project.sh  install.sh  setup-kubeconfig-secret.sh  test-init-project.sh
src/: client.rs  config.rs  context.rs  errors.rs  health_monitor.rs  lib.rs  main.rs  recovery.rs  session.rs  session_store.rs  stdio_wrapper.rs  tool_suggester.rs
src/server/: http_server.rs
src/services/: process.rs
tests/: debug_config_path.rs  integration.rs  integration_save_config.rs  save_config_unit.rs
tests/integration/: http_transport_tests.rs  mod.rs  session_config_tests.rs  simple_forwarding_test.rs  toolman_server_tests.rs
tests/integration/common/: mcp_test_client.rs  mod.rs  protocol_validator.rs  server_lifecycle.rs  test_helpers.rs
tests/integration/real_servers/: docker_servers.rs  http_sse_servers.rs  mod.rs  npx_servers.rs  uvx_servers.rs
tests/unit/: http_transport_detection.rs
