[package]
name = "toolman"
version = "2.2.0"
edition = "2021"
description = "Dynamic tool management for MCP (Model Context Protocol) servers - Your ultimate tool companion"
authors = ["Toolman Contributors"]
license = "MIT"
repository = "https://github.com/5dlabs/toolman"
homepage = "https://github.com/5dlabs/toolman"
documentation = "https://github.com/5dlabs/toolman"
keywords = ["mcp", "model-context-protocol", "ai", "tools", "cursor", "toolman"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "toolman"
path = "src/lib.rs"

[[bin]]
name = "toolman-client"
path = "src/bin/client.rs"

[[bin]]
name = "toolman-server"
path = "src/bin/http_server.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0.0"
sha2 = "0.10"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.22", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
# rmcp = { version = "0.2.1", features = ["server", "transport-streamable-http-server", "transport-child-process", "transport-worker"] }

# HTTP server dependencies
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
ctrlc = "3.4.7"

# Kubernetes dependencies
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
tokio-test = "0.4"
env_logger = "0.11.8"
log = "0.4"

# Integration test configuration
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
